--- a/client/views/settings/website-management/manage-routes.html
+++ b/client/views/settings/website-management/manage-routes.html
@@ -28,12 +28,13 @@
   <span class="sd-page__element-grow"></span>
   <div class="dropdown sd-margin-l--auto" dropdown="">
     <button class="btn btn--primary ng-binding" dropdown__toggle="">
-      <i class="icon-plus-sign icon--white"></i>Add New
+      <i class="icon-plus-sign icon--white"></i><span translate>Add New</span>
     </button>
     <ul class="dropdown__menu dropdown--align-right">
       <li>
         <button
           ng-click="webPublisherSettings.toggleCreateRoute(true, 'collection')"
+          translate
         >
           Collection
         </button>
@@ -41,6 +42,7 @@
       <li>
         <button
           ng-click="webPublisherSettings.toggleCreateRoute(true, 'content')"
+          translate
         >
           Content
         </button>
@@ -48,6 +50,7 @@
       <li>
         <button
           ng-click="webPublisherSettings.toggleCreateRoute(true, 'custom')"
+          translate
         >
           Custom
         </button>
