--- a/client/views/settings/website-management/manage-theme-settings.html
+++ b/client/views/settings/website-management/manage-theme-settings.html
@@ -2,10 +2,10 @@
     <form name="webPublisherSettings.themeSettingsForm">
         <div class="grid">
             <div class="grid__item grid__item--col-12">
-                <h3 class="text--normal">Logos</h3>
+                <h3 class="text--normal" translate>Logos</h3>
             </div>
             <div class="grid__item grid__item--col-4 upload-media margin--top margin--bottom">
-                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock">Main Logo</h4>
+                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock" translate>Main Logo</h4>
                 <div class="bottomMargin iconOnHover"
                     ng-if="webPublisherSettings.themeSettings.theme_logo.value && !webPublisherSettings.replace_theme_logo"
                     ng-click="webPublisherSettings.replace_theme_logo = true">
@@ -17,19 +17,19 @@
                     <div class="drag-area" ngf-drop="webPublisherSettings.uploadThemeLogo($files, 'theme_logo')"
                         ngf-multiple="false" ng-class="{compact: items.length}">
                         <div class="upload-error" ng-show="newThemeSettings.theme_logo.error">
-                            <span class="action">Something went wrong</span>
+                            <span class="action" translate>Something went wrong</span>
                         </div>
                         <div class="title" translate>Drop Your Logo Here</div>
                         <div class="upload-manual">
                             <div class="or-label" translate>or</div>
-                            <label class="btn" for="theme_logo">{{ 'Select from folder' | translate }}</label>
+                            <label class="btn" for="theme_logo" translate>Select from folder</label>
                             <input id="theme_logo" type="file" ngf-select="webPublisherSettings.uploadThemeLogo($files, 'theme_logo')" class="hide">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="grid__item grid__item--col-4 upload-media margin--top margin--bottom">
-                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock">Second Logo</h4>
+                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock" translate>Second Logo</h4>
                 <div class="bottomMargin iconOnHover"
                     ng-if="webPublisherSettings.themeSettings.theme_logo_second.value && !webPublisherSettings.replace_theme_logo_second"
                     ng-click="webPublisherSettings.replace_theme_logo_second = true">
@@ -41,19 +41,19 @@
                     <div class="drag-area" ngf-drop="webPublisherSettings.uploadThemeLogo($files, 'theme_logo_second')"
                         ngf-multiple="false" ng-class="{compact: items.length}">
                         <div class="upload-error" ng-show="newThemeSettings.theme_logo_second.error">
-                            <span class="action">Something went wrong</span>
+                            <span class="action" translate>Something went wrong</span>
                         </div>
                         <div class="title" translate>Drop Your Logo Here</div>
                         <div class="upload-manual">
                             <div class="or-label" translate>or</div>
-                            <label class="btn" for="theme_logo_second">{{ 'Select from folder' | translate }}</label>
+                            <label class="btn" for="theme_logo_second" translate>Select from folder</label>
                             <input id="theme_logo_second" type="file" ngf-select="webPublisherSettings.uploadThemeLogo($files, 'theme_logo_second')" class="hide">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="grid__item grid__item--col-4 upload-media margin--top margin--bottom">
-                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock">Third Logo</h4>
+                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock" translate>Third Logo</h4>
                 <div class="bottomMargin iconOnHover"
                     ng-if="webPublisherSettings.themeSettings.theme_logo_third.value && !webPublisherSettings.replace_theme_logo_third"
                     ng-click="webPublisherSettings.replace_theme_logo_third = true">
@@ -65,12 +65,12 @@
                     <div class="drag-area" ngf-drop="webPublisherSettings.uploadThemeLogo($files, 'theme_logo_third')"
                         ngf-multiple="false" ng-class="{compact: items.length}">
                         <div class="upload-error" ng-show="newThemeSettings.theme_logo_third.error">
-                            <span class="action">Something went wrong</span>
+                            <span class="action" translate>Something went wrong</span>
                         </div>
                         <div class="title" translate>Drop Your Logo Here</div>
                         <div class="upload-manual">
                             <div class="or-label" translate>or</div>
-                            <label class="btn" for="theme_logo_third">{{ 'Select from folder' | translate }}</label>
+                            <label class="btn" for="theme_logo_third" translate>Select from folder</label>
                             <input id="theme_logo_third" type="file" ngf-select="webPublisherSettings.uploadThemeLogo($files, 'theme_logo_third')" class="hide">
                         </div>
                     </div>
@@ -81,7 +81,7 @@
             <div class="grid__item grid__item--col-6">
                 <div class="grid">
                     <div class="grid__item grid__item--col-12 margin--bottom">
-                        <h3 class="text--normal">Theme Settings</h3>
+                        <h3 class="text--normal" translate>Theme Settings</h3>
                     </div>
                     <div class="grid__item"
                         ng-repeat="setting in newThemeSettings.settings"
@@ -122,14 +122,14 @@
             <div class="grid__item grid__item--col-6">
                 <div class="grid">
                     <div class="grid__item grid__item--col-12">
-                        <h3 class="text--normal">Revert styles</h3>
+                        <h3 class="text--normal" translate>Revert styles</h3>
                     </div>
-                    <div class="grid__item grid__item--col-12 margin--top">Revert styles back to theme defaults:</div>
+                    <div class="grid__item grid__item--col-12 margin--top" translate>Revert styles back to theme defaults:</div>
                     <div class="grid__item grid__item--col-12 margin--top">
                         <button class="btn btn--hollow btn--primary"
                             ng-click="webPublisherSettings.themeSettingsRevert()"
                             ng-disabled="loading">
-                            <i class="icon-refresh" ng-class="{'animate--rotate': loading}"></i> Theme defaults
+                            <i class="icon-refresh" ng-class="{'animate--rotate': loading}"></i> <span translate>Theme defaults</span>
                         </button>
                     </div>
                 </div>
