--- a/client/views/settings/website-management/navigation/index.html
+++ b/client/views/settings/website-management/navigation/index.html
@@ -1,12 +1,12 @@
 <div class="sd-page__header">
-  <h2 class="sd-page__page-heading">Navigation</h2>
+  <h2 class="sd-page__page-heading" translate>Navigation</h2>
   <span class="sd-page__element-grow"></span>
   <a
     href=""
     ng-disabled="webPublisherSettings.menuAdd"
     ng-click="webPublisherSettings.createMenuCard()"
     class="btn btn--primary"
-    ><i class="icon-plus-sign"></i>Add new</a
+    ><i class="icon-plus-sign"></i><span translate>Add new</span></a
   >
 </div>
 
