--- a/client/views/settings/website-management/partials/routes-tree.html
+++ b/client/views/settings/website-management/partials/routes-tree.html
@@ -43,12 +43,12 @@
       <ul class="dropdown__menu">
         <li>
           <button ng-click="webPublisherSettings.editRoute(route)">
-            <i class="icon-pencil"></i>{{:: 'Edit'| translate}}
+            <i class="icon-pencil"></i><span translate>Edit</span>
           </button>
         </li>
         <li>
           <button ng-click="webPublisherSettings.deleteRoute(route.id)">
-            <i class="icon-trash"></i>{{:: 'Delete'| translate}}
+            <i class="icon-trash"></i><span translate>Delete</span>
           </button>
         </li>
       </ul>
