--- a/client/views/settings/website-management/webhooks/index.html
+++ b/client/views/settings/website-management/webhooks/index.html
@@ -1,6 +1,6 @@
 <div class="sd-page__header">
     <span class="sd-page__element-grow"></span>
-    <a href="" ng-click="webPublisherSettings.toggleCreateWebhook(true)" class="btn btn--primary"><i class="icon-plus-sign"></i>Add new</a>
+    <a href="" ng-click="webPublisherSettings.toggleCreateWebhook(true)" class="btn btn--primary"><i class="icon-plus-sign"></i><span translate>Add new</span></a>
 </div>
 
 <div class="sd-page-content__content-block sd-page-content__content-block--main relative flexGrow" ng-class="{'open-preview': webPublisherSettings.webhookPaneOpen}" >
@@ -11,8 +11,8 @@
                 <div class="panel-info__icon">
                     <i class="big-icon--publisher"></i>
                 </div>
-                <h3 class="panel-info__heading">No webhooks so far.</h3>
-                <p class="panel-info__description">Be the first one...</p>
+                <h3 class="panel-info__heading" translate>No webhooks so far.</h3>
+                <p class="panel-info__description" translate>Be the first one...</p>
             </div>
             <div ng-if="webPublisherSettings.webhooks.length">
                 <div ng-repeat="webhook in webPublisherSettings.webhooks track by $index"
