--- a/client/views/settings/index.html
+++ b/client/views/settings/index.html
@@ -7,6 +7,7 @@
           class="sd-left-nav__btn"
           ng-class="{'sd-left-nav__btn--active': webPublisherSettings.activePanel === 'tenant'}"
           ng-click="webPublisherSettings.changePanel('tenant')"
+          translate
           >Website Management</a
         >
       </li>
@@ -16,6 +17,7 @@
           class="sd-left-nav__btn"
           ng-class="{'sd-left-nav__btn--active': webPublisherSettings.activePanel === 'rules'}"
           ng-click="webPublisherSettings.changePanel('rules'); webPublisherSettings.togglePreviewRule()"
+          translate
           >Publishing Rules</a
         >
       </li>
