--- a/client/views/settings/rules/rule-add-tenant.html
+++ b/client/views/settings/rules/rule-add-tenant.html
@@ -1,20 +1,20 @@
 <form name="webPublisherSettings.ruleForm" class="flat">
     <div class="form__row">
         <div class="sd-line-input">
-            <label class="sd-line-input__label">Name</label>
+            <label class="sd-line-input__label" translate>Name</label>
             <input class="sd-line-input__input" type="text" ng-model="newRule.name" required>
         </div>
     </div>
     <div class="form__row">
         <div class="sd-line-input">
-            <label class="sd-line-input__label">Description</label>
+            <label class="sd-line-input__label" translate>Description</label>
             <input class="sd-line-input__input" type="text" ng-model="newRule.description">
         </div>
     </div>
     <div class="shadowBlock">
         <div class="form__row">
             <div class="sd-line-input sd-line-input--is-select">
-                <label class="sd-line-input__label">Tenant</label>
+                <label class="sd-line-input__label" translate>Tenant</label>
                 <select class="sd-line-input__select"
                     required
                     ng-model="newRule.action.tenant"
@@ -26,7 +26,7 @@
         </div>
 
 
-        <label class="form-label" ng-if="!newRule.id">Expression</label>
+        <label class="form-label" ng-if="!newRule.id" translate>Expression</label>
         <div ng-if="!newRule.id"
             class="form__row form__row--flex margin--bottom0"
             ng-repeat="expression in newRule.expressions">
@@ -110,7 +110,7 @@
         </div>
 
         <div class="sd-line-input" ng-if="newRule.id">
-            <label class="sd-line-input__label">Expression</label>
+            <label class="sd-line-input__label" translate>Expression</label>
             <p class="codeBlock" >
                 {{webPublisherSettings.selectedRule.expression}}
             </p>
@@ -119,7 +119,7 @@
         <div ng-if="!newRule.id" class="form__row margin--top">
             <button class="btn"
                 ng-click="webPublisherSettings.addRuleExpression()"
-                ng-disabled="!newRule.expressions[newRule.expressions.length-1].value">
+                ng-disabled="!newRule.expressions[newRule.expressions.length-1].value" translate>
                 Add expression
             </button>
         </div>
@@ -127,7 +127,7 @@
         <div class="form__row"
             ng-if="!newRule.action.tenant.output_channel">
             <div class="sd-line-input sd-line-input--is-select">
-                <label class="sd-line-input__label">Route</label>
+                <label class="sd-line-input__label" translate>Route</label>
                 <select class="sd-line-input__select"
                     required
                     ng-disabled="!newRule.action.tenant"
@@ -138,11 +138,11 @@
             </div>
         </div>
         <div class="form__row">
-            <sd-check ng-model="newRule.action.published">Auto Publish</sd-check>
-            <sd-check ng-if="newRule.action.tenant.fbia_enabled" ng-model="newRule.action.fbia">Publish on Facebook</sd-check>
+            <sd-check ng-model="newRule.action.published"><div translate>Auto Publish</div></sd-check>
+            <sd-check ng-if="newRule.action.tenant.fbia_enabled" ng-model="newRule.action.fbia"><div translate>Publish on Facebook</div></sd-check>
         </div>
         <div class="form__row" ng-if="newRule.action.tenant.paywall_enabled && !newRule.action.tenant.output_channel">
-            <sd-check ng-model="newRule.action.paywall_secured">Paywall Secured</sd-check>
+            <sd-check ng-model="newRule.action.paywall_secured"><div translate>Paywall Secured</div></sd-check>
         </div>
     </div>
 </form>
